fixed citation, reverted back to eLife formatting

--- a/Legacy.bib
+++ b/Legacy.bib
@@ -102,6 +102,17 @@ title = {{A comprehensive catalogue of somatic mutations from a human cancer gen
 volume = {463},
 year = {2010}
 }
+@article{mccarthy2016reference,
+  title={A reference panel of 64,976 haplotypes for genotype imputation},
+  author={McCarthy, Shane and Das, Sayantan and Kretzschmar, Warren and Delaneau, Olivier and Wood, Andrew R and Teumer, Alexander and Kang, Hyun Min and Fuchsberger, Christian and Danecek, Petr and Sharp, Kevin and others},
+  journal={Nature genetics},
+  volume={48},
+  number={10},
+  pages={1279},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
 @article{Minoche2011,
 abstract = {BACKGROUND: The generation and analysis of high-throughput sequencing data are becoming a major component of many studies in molecular biology and medical research. Illumina's Genome Analyzer (GA) and HiSeq instruments are currently the most widely used sequencing devices. Here, we comprehensively evaluate properties of genomic HiSeq and GAIIx data derived from two plant genomes and one virus, with read lengths of 95 to 150 bases.$\backslash$n$\backslash$nRESULTS: We provide quantifications and evidence for GC bias, error rates, error sequence context, effects of quality filtering, and the reliability of quality values. By combining different filtering criteria we reduced error rates 7-fold at the expense of discarding 12.5{\%} of alignable bases. While overall error rates are low in HiSeq data we observed regions of accumulated wrong base calls. Only 3{\%} of all error positions accounted for 24.7{\%} of all substitution errors. Analyzing the forward and reverse strands separately revealed error rates of up to 18.7{\%}. Insertions and deletions occurred at very low rates on average but increased to up to 2{\%} in homopolymers. A positive correlation between read coverage and GC content was found depending on the GC content range.$\backslash$n$\backslash$nCONCLUSIONS: The errors and biases we report have implications for the use and the interpretation of Illumina sequencing data. GAIIx and HiSeq data sets show slightly different error profiles. Quality filtering is essential to minimize downstream analysis artifacts. Supporting previous recommendations, the strand-specificity provides a criterion to distinguish sequencing errors from low abundance polymorphisms.},
 author = {Minoche, Andr{\'{e}} E. and Dohm, Juliane C. and Himmelbauer, Heinz},
@@ -231,6 +242,16 @@ title = {{A map of human genome variation from population-scale sequencing.}},
 url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3042601{\&}tool=pmcentrez{\&}rendertype=abstract},
 volume = {467},
 year = {2010}
+}
+@article{phase3,
+  title={A global reference for human genetic variation},
+  author={1000 Genomes Project Consortium and others},
+  journal={Nature},
+  volume={526},
+  number={7571},
+  pages={68},
+  year={2015},
+  publisher={Nature Publishing Group}
 }
 @article{Pleasance2010,
 abstract = {Cancer is driven by mutation. Worldwide, tobacco smoking is the principal lifestyle exposure that causes cancer, exerting carcinogenicity through {\textgreater}60 chemicals that bind and mutate DNA. Using massively parallel sequencing technology, we sequenced a small-cell lung cancer cell line, NCI-H209, to explore the mutational burden associated with tobacco smoking. A total of 22,910 somatic substitutions were identified, including 134 in coding exons. Multiple mutation signatures testify to the cocktail of carcinogens in tobacco smoke and their proclivities for particular bases and surrounding sequence context. Effects of transcription-coupled repair and a second, more general, expression-linked repair pathway were evident. We identified a tandem duplication that duplicates exons 3-8 of CHD7 in frame, and another two lines carrying PVT1-CHD7 fusion genes, indicating that CHD7 may be recurrently rearranged in this disease. These findings illustrate the potential for next-generation sequencing to provide unprecedented insights into mutational processes, cellular repair pathways and gene networks associated with cancer.},
